improved specification
